# cloud-storage-sync

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: rust.yml
src/: error.rs  gcs.rs  gcs2local.rs  lib.rs  local.rs  util.rs
