[package]
name = "cloud-storage-sync"
version = "0.2.5-alpha.0"
authors = ["Andrey Kuznetsov <fear@loathing.in>"]
license-file = "LICENSE.txt"
description = "Embedded rsync-like local files and Google Cloud Storage buckets"
homepage = "https://github.com/onsails/cloud-storage-sync"
repository = "https://github.com/onsails/cloud-storage-sync"
documentation = "https://docs.rs/cloud-storage-sync"
categories = ["filesystem"]
keywords = ["sync", "rsync", "google-cloud", "google", "cloud"]
edition = "2018"

[dependencies]
cloud-storage = "0.4.0"
snafu = { version = "0.6.8", features = ["backtraces"] }
mime_guess = "2.0.3"
mime = "0.3.16"
reqwest = "0.10.4"
log = "0.4.8"
crc32c = "0.5"
base64 = "0.12"
arrayref = "0.3.6"

[dev-dependencies]
env_logger = "0.7.1"
tempdir = "0.3"
dotenv = "0.15.0"
