[package]
name = "cloud-storage-sync"
version = "0.3.1-alpha.0"
authors = ["Andrey Kuznetsov <fear@loathing.in>"]
license-file = "LICENSE.txt"
description = "Embedded rsync-like local files and Google Cloud Storage buckets"
homepage = "https://github.com/onsails/cloud-storage-sync"
repository = "https://github.com/onsails/cloud-storage-sync"
documentation = "https://docs.rs/cloud-storage-sync"
categories = ["filesystem"]
keywords = ["sync", "rsync", "google-cloud", "google", "cloud"]
edition = "2018"

[dependencies]
cloud-storage = "0.6"
futures = "0.3"
futures-io = "0.3"
tokio = { version = "0.2", features = [ "fs" ] }

bytes = "0.5"

snafu = { version = "0.6", features = ["backtraces", "futures"] }
mime_guess = "2.0"
mime = "0.3"
reqwest = "0.10"
log = "0.4"
crc32c = "0.5"
base64 = "0.12"
arrayref = "0.3"

[dev-dependencies]
env_logger = "0.8.1"
tempdir = "0.3"
dotenv = "0.15.0"

[dev-dependencies.tokio]
version = "0.2"
features = [ "rt-threaded", "macros" ]
