[package]
name = "cloud-storage-sync"
version = "0.4.1-alpha.0"
authors = ["Andrey Kuznetsov <fear@loathing.in>"]
license-file = "LICENSE.txt"
description = "Embedded rsync-like local files and Google Cloud Storage buckets"
homepage = "https://github.com/onsails/cloud-storage-sync"
repository = "https://github.com/onsails/cloud-storage-sync"
documentation = "https://docs.rs/cloud-storage-sync"
categories = ["filesystem"]
keywords = ["sync", "rsync", "google-cloud", "google", "cloud"]
edition = "2018"

[dependencies]
cloud-storage = "0.8"
futures = "0.3"
futures-io = "0.3"
tokio = { version = "1.2", features = [ "fs" ] }
tokio-stream = { version = "0.1", features = ["fs"] }
tokio-util = { version = "0.6", features = [ "io" ] }

bytes = "1.0"

snafu = { version = "0.6", features = ["backtraces", "futures"] }
mime_guess = "2.0"
mime = "0.3"
reqwest = "0.11"
log = "0.4"
crc32c = "0.6"
base64 = "0.13"
arrayref = "0.3"

[dev-dependencies]
env_logger = "0.8"
tempdir = "0.3"
dotenv = "0.15.0"
lazy_static = "1.4.0"

[dev-dependencies.tokio]
version = "1.2"
features = [ "rt-multi-thread", "macros" ]
